methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:20: error: not found: value Blue
  growFlowers(Blue)
              ^